@@ -1,1 +1,2 @@
+# -*- test-case-name: twisted.pb.test -*-
 """perspective broker tests"""
